<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="290dp"
            android:layout_height="70dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/resistencia_electrica_1" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Banda1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/banda1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/sp_banda_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:entries="@array/banda_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Banda2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/banda2"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/sp_banda_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:entries="@array/banda_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Banda3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/banda3"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/sp_banda_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:entries="@array/banda_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Tolerancia"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/tolerancia"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/sp_tolerancia"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:entries="@array/tolerancia" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/calcular"
        android:textColor="@color/white"
        android:textSize="30sp" />

</LinearLayout>